[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiring-coordinator-env"
version = "1.0.0"
description = "Policy-aware hiring coordinator environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "openenv-core>=0.2.3",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "server:main"

[tool.setuptools]
py-modules = [
    "baseline",
    "data_generator",
    "environment",
    "graders",
    "inference",
    "models",
    "server",
    "validate",
]
